# ap.services.user/src/core/userController.ts
@@ -12,31 +12,6 @@ router.get('/', (req: Request, res: Response): void => {
   res.send('Successfully started!');
 });
 
-router.get('/getUsers', (req: Request, res: Response): void => {
-  let users = userUtil.getUsers();
-
-  if (users?.length) {
-    res.status(200);
-    res.send(users);
-  } else {
-    res.sendStatus(404);
-  }
-});
-
-router.get('/getUser', (req: Request, res: Response): void => {
-  if (isNaN(req.query.id as any)) {
-    res.sendStatus(400);
-  }
-
-  let user = userUtil.getUser(req.query.id as any);
-  if (user) {
-    res.status(200);
-    res.send(user);
-  } else {
-    res.sendStatus(404);
-  }
-});
-
 router.post('/addUser', (req: Request, res: Response): void => {
   if (!req.body.user) {
     res.sendStatus(404);
@@ -47,21 +22,6 @@ router.post('/addUser', (req: Request, res: Response): void => {
     let addedUser = userUtil.addUser(user);
     res.status(200);
     res.send(addedUser);
-  } catch {
-    res.sendStatus(500);
-  }
-});
-
-router.post('/updateUser', (req: Request, res: Response): void => {
-  if (!req.body.user) {
-    res.sendStatus(404);
-  }
-
-  try {
-    let user = req.body.user;
-    let updatedUser = userUtil.updateUser(user);
-    res.status(200);
-    res.send(updatedUser);
   } catch {
     res.sendStatus(500);
   }
@@ -98,6 +58,44 @@ router.get('/changeUserState', (req: Request, res: Response): void => {
   try {
     res.status(200);
     res.send(userUtil.changeUserState(req.query.id as any));
+  } catch {
+    res.sendStatus(500);
+  }
+});
+
+router.get('/getUser', (req: Request, res: Response): void => {
+  if (isNaN(req.query.id as any)) {
+    res.sendStatus(400);
+  }
+  let user = userUtil.getUser(req.query.id as any);
+  if (user) {
+    res.status(200);
+    res.send(user);
+  } else {
+    res.sendStatus(404);
+  }
+});
+
+router.get('/getUsers', (req: Request, res: Response): void => {
+  let users = userUtil.getUsers();
+
+  if (users?.length) {
+    res.status(200);
+    res.send(users);
+  } else {
+    res.sendStatus(404);
+  }
+});
+
+router.post('/updateUser', (req: Request, res: Response): void => {
+  if (!req.body.user) {
+    res.sendStatus(404);
+  }
+  try {
+    let user = req.body.user;
+    let updatedUser = userUtil.updateUser(user);
+    res.status(200);
+    res.send(updatedUser);
   } catch {
     res.sendStatus(500);
   }
